<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/running_heading"
                android:scaleType="centerCrop"
                android:contentDescription="@string/fragment_running_description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/running"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:textSize="24sp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/frame_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_5km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_view_heading_5km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/_5km"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/text_view_5km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22:04"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/dark_grey"
                    />

                <TextView
                    android:id="@+id/text_view_5km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_5km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22/10/21"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_10km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_view_heading_10km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/_10km"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/text_view_10km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22:04"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/dark_grey"
                    />

                <TextView
                    android:id="@+id/text_view_10km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_10km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22/10/21"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_half_marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_view_heading_half_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/half_marathon"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/text_view_half_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22:04"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/dark_grey"
                    />

                <TextView
                    android:id="@+id/text_view_half_marathon_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_half_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22/10/21"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_view_heading_marathon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/marathon"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/text_view_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22:04"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/dark_grey"
                    />

                <TextView
                    android:id="@+id/text_view_20km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="22/10/21"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light" />

            </androidx.constraintlayout.widget.ConstraintLayout>





        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>